--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+artifact.zip
+.terraform
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
